<resources>
    <string name="mileagetracker_name">Mileage Tracker</string>
    <string name="breeze_name">Concur Breeze</string>
    <string name="corporate_name">Concur</string>
    <string name="se_name">SmartExpense</string>
    <string name="gov_name">Concur Gov</string>
    <string name="copyright">© Copyright 2013 Concur Technologies, Inc.\nAll rights reserved.</string>
    <string name="preference_screen_title">Concur Settings</string>
    <string name="pref_mws_address">Mobile Server Address</string>
    <string name="pref_auto_login">Automatically Sign In</string>
    <string name="pref_save_login">Save Sign In</string>
    <string name="pref_cat_server">Server</string>
    <string name="pref_cat_login">Sign In</string>
    <string name="pref_cat_version">Version</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_notif">Notifications</string>
    <string name="pref_push_allow">Allow notifications</string>
    <string name="pref_push_vibrate">Vibrate on notification</string>
    <string name="pref_voice_language">Voice Search Language</string>
    <string name="pref_voice_language_summary">Select the language to use when performing voice searches.</string>
    <string name="pref_libraries_title">Open Source Licenses</string>
    <string name="pref_libraries_description">License details for open source software</string>
    <string name="whats_new_in_version">What\'s New in Version %%0%%</string>
    <string name="swipe_for_more">Swipe for more</string>
    <string-array name="whats_new">
        <item>\u2022 Improved Sign-in </item>
        <item>\u2022 We have redesigned the hotel booking experience in the app! We have made it easier than ever to find the perfect hotel for your next business trip with the following:</item>
        <item>\u002D Personalized Suggestions: Now you will see hotels highlighted based on your past stays, your co-workers past stays as well as those popular with other business travelers.</item>
        <item>\u002D Clear company policy: Now with clear visual cues on each room rate to keep you in policy.</item>
        <item>\u002D Hotels Near You: Quickly find a hotel near you when plans change.</item>
    </string-array>
    <string name="book_travel_on_the_go">Book Travel on the go with Concur</string>
    <string name="splash_authenticating">Authenticating...</string>
    <string name="login_id_hint">User Name / Email Address</string>
    <string name="login_pin_hint">PIN</string>
    <string name="login_pin_confirm_hint">Re-enter PIN</string>
    <string name="login_password_hint">Password</string>
    <string name="login_having_trouble">Having Trouble Signing In?</string>
    <string name="login_sign_in_help">Password</string>
    <string name="login_company_sign_in_link">Company Code Sign In</string>
    <string name="login_company_sign_in">Company Sign In</string>
    <string name="login_company_sign_on">Company Sign On</string>
    <string name="login_company_code_hint">Enter your Company Code</string>
    <string name="login_company_code_help">For help, sign in to the web version of Concur and navigate to Profile > Mobile Registration.\n\nIf your company has issued a company code enter it below.</string>
    <string name="login_failure">Unable to sign in</string>
    <string name="login_unathorized">Username or PIN is invalid</string>
    <string name="login_failure_help">You can create or reset your mobile PIN by clicking on \'Need to set your PIN?\' or by navigating to \'Profile -> Mobile Registration\' in Concur online.</string>
    <string name="login_title">Sign In</string>
    <string name="submit_button">Submit</string>
    <string name="login_remote_wipe_title">All local data has been cleared.</string>
    <string name="login_remote_wipe_msg">Please contact your company\'s help desk or travel/expense department.</string>
    <string name="login_pin_expired_title">PIN Expired</string>
    <string name="login_sso_required_title">Company Sign-On Required</string>
    <string name="login_sso_required_msg">Your company requires single sign-on (SSO) via a company sign in page. Please select the \'Having Trouble Signing In?\' link at the bottom of this page.</string>
    <string name="login_sso_query">Retrieving company sign-on information...</string>
    <string name="login_sso_company_code_not_found_msg">Your company code can not be found.  Please double-check your value and try again.</string>
    <string name="login_sso_disabled_title">Company Sign-on Disabled</string>
    <string name="login_sso_disabled_msg">Company sign-on has been disabled for your company.  Please contact your company administrator.</string>
    <string name="login_sso_configure_mobile_session">Configuring mobile session...</string>
    <string name="login_sso_configure_mobile_session_failed_title">Configure Mobile Session Failed</string>
    <string name="login_sss_configure_mobile_session_failed_msg">Configuring your mobile session via single sign-on has failed.  Please contact your company administrator.</string>
    <string name="login_sso_no_company_code_msg">Please provide a value for company code.</string>
    <string name="login_sso_query_failed_title">Retrieval Failed</string>
    <string name="login_expired">Your session has expired and auto-sign in is disabled.  You must sign in again.</string>
    <string name="login_expired_auto_sign_in_success">Your session has expired and you are automatically signed in.</string>
    <string name="login_enter_name_password">Enter Concur User Name</string>
    <string name="login_help_with_signin_title">Sign In Help</string>
    <string name="login_more_help">More Help</string>
    <string name="login_more_help_title">More Help</string>
    <string name="login_more_help_subheader">Username and Password</string>
    <string name="login_more_help_message">In most cases, you will sign into our app using the same username and password you use for the web version of Concur.&lt;br/>&lt;br/>If you don’t have this information, please submit your email on the previous screen to receive sign in info, or contact your company administrator.</string>
    <string name="login_help_username">Don\'t know your username?</string>
    <string name="login_help_username_message">Based on your company setup, this could either be your Web username or email address. If you don\'t know your username, go to "Profile" on the Concur Website and use the username displayed under "Mobile Registration".\n\nOr go back to the previous screen and submit your Concur registered email. We will send you instructions on how to sign in.</string>
    <string name="login_help_password">Don\'t know your password or PIN?</string>
    <string name="login_help_password_message">&lt;b>If your company allows PIN for mobile sign-in:&lt;/b>&lt;br/>Go back to the previous screen and submit your Concur registered email. We will send you instructions on how to sign in.&lt;br/>&lt;br/>&lt;b>If your company requires a password:&lt;/b>&lt;br/>Use the same password you use to sign in to the Concur Website.</string>
    <string name="login_help_pin">Don\'t know your PIN?</string>
    <string name="login_help_pin_message">Your PIN is an alternative way to log in and can be created in cases where you are automatically logged into the Web version of Concur by your company and you don\'t know the password.\n\nTo create a PIN, visit the Web version of Concur (Profile > Mobile Registration).</string>
    <string name="login_help_setup_video">Watch setup video</string>
    <string name="login_try_again_help">Would you like to try again or get sign in help?</string>
    <string name="login_id_invalid">User Name should consist of your sign in name followed by an @ sign and your company domain.</string>
    <string name="login_disabled_title">Sign In Disabled</string>
    <string name="login_disabled_message">Mobile is disabled for your company.</string>
    <string name="login_help_work_email">work email</string>
    <string name="login_help_email_prompt">Enter your %%0!work email%% to receive your sign in information.</string>
    <string name="login_help_email_hint">Concur Registered Email</string>
    <string name="login_help_email_popup">This is the email you setup in Profile/Personal Information/Email Addresses on the Concur Website.</string>
    <string name="login_help_submit_confirm_title">Sign In Instructions Sent</string>
    <string name="login_help_submit_confirm_message">Open the email from this device to access the Concur app.</string>
    <string name="login_help_bad_email_dialog_title">Invalid Email</string>
    <string name="login_help_bad_email_dialog_message">Please input a valid email address to receive sign-in instructions.</string>
    <string name="login_help_topic_header">Or Select a Help Topic</string>
    <string name="login_help_submit">Send my Sign In Details</string>
    <string name="pin_create_title">Mobile PIN</string>
    <string name="sso_sign_in_title">Sign in with SSO</string>
    <string name="sso_sign_in_sub_title">If your company has issued a company code, enter it here.</string>
    <string name="sso_sign_in_hint_text">Company Code</string>
    <string name="sso_signin">Proceed to Sign In</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reset">Clear Offline Data</string>
    <string name="menu_logout">Sign Out</string>
    <string name="msg_cntr_title">Message Center</string>
    <string name="triplist_menu_travel_apps_title">Travel Apps</string>
    <string name="triplist_menu_travel_agency_info">Agency Info</string>
    <string name="save">Save</string>
    <string name="expense_type">Expense Type</string>
    <string name="expense_report">Expense Report</string>
    <string name="report_total_colon">Report Total:</string>
    <string name="less_personal_amount_colon">Less Personal Amount:</string>
    <string name="amount_claimed_colon">Amount Claimed:</string>
    <string name="report_submit_dialog_message">Are you sure you want to submit this expense report?</string>
    <string name="receipt_reminder">Reminder: Receipts Required!</string>
    <string name="no_receipt_thumbnail_available">Receipt thumbnail\nnot available.</string>
    <string name="select_all">Select All</string>
    <string name="new_cash_expense">Add Quick Expense</string>
    <string name="new_ocr_expense">Add OCR Expense</string>
    <string name="expense_date">Date</string>
    <string name="expense_amount">Amount</string>
    <string name="capture_receipt">Capture Receipt</string>
    <string name="select_receipt">Select Receipt</string>
    <string name="add_expense">Add Expense</string>
    <string name="new_expense">New Expense</string>
    <string name="import_expenses">Import Expense(s)</string>
    <string name="capture_report_receipt">Capture Report Receipt</string>
    <string name="select_from_device">Select from Gallery</string>
    <string name="select_from_cloud">Select from Receipt Store</string>
    <string name="select_report_receipt">Select Report Receipt</string>
    <string name="refresh">Refresh</string>
    <string name="receipt_document_type">Document Type</string>
    <string name="receipt_added_on">Added On</string>
    <string name="receipt_added_from">Added From</string>
    <string name="receipt_source_fax">Fax</string>
    <string name="receipt_document_type_pdf">PDF</string>
    <string name="delete_report">Delete Report</string>
    <string name="menu_sort_expenses">Sort Expenses</string>
    <string name="sort_expenses_by_date_newest">Date (newest)</string>
    <string name="sort_expenses_by_date_oldest">Date (oldest)</string>
    <string name="sort_expenses_by_amount_lowest">Amount (lowest)</string>
    <string name="sort_expenses_by_amount_highest">Amount (highest)</string>
    <string name="sort_expenses_by_expense">Expense Type</string>
    <string name="sort_expenses_by_vendor">Vendor</string>
</resources>