<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/new_cash_expense"
        android:icon="@drawable/icon_add"
        yourapp:showAsAction="ifRoom"
        android:title="@string/new_cash_expense"/>
    <item
        android:id="@+id/sort_by"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_sort_expenses"/>
    <item
        android:id="@+id/select_all"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/select_all"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/refresh"/>

</menu>