<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item 
        android:id="@+id/new_ocr_receipt_capture"
        android:icon="@drawable/action_bar_icon_camera"
        yourapp:showAsAction="ifRoom"
        android:title="@string/new_ocr_expense"/>
    <item
        android:id="@+id/new_cash_expense"
        android:icon="@drawable/action_bar_icon_plus"
        yourapp:showAsAction="ifRoom"
        android:title="@string/new_cash_expense"/>
    <item
        android:id="@+id/select_all"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/select_all"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/refresh"/>

</menu>