<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginLeft="6dp"
		>
			<TextView
				android:id="@+id/missing_receipt_title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/report_submit_dialog_message"
				android:textAppearance="@style/CustomDialogMessageText"
				android:layout_margin="6dp"
				android:layout_gravity="center"
			/>
			<TextView
				android:id="@+id/missing_receipt_reminder"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:minLines="1"
				android:text="@string/receipt_reminder"
				android:textAppearance="@style/CustomDialogMessageSubheaderText"
				android:textStyle="bold"
				android:gravity="left"
				android:layout_marginLeft="6dp"
			/>
			<TextView
				android:id="@+id/provide_receipt"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textAppearance="@style/CustomDialogMessageSubheaderText"
				android:layout_marginLeft="6dp"
			/>
			<TextView
				android:id="@+id/fax_or_attach"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textAppearance="@style/CustomDialogMessageSubheaderText"
				android:layout_marginLeft="6dp"
			/>
			<TableLayout
				android:id="@+id/expense_list_table"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:stretchColumns="0,1,2"
				android:shrinkColumns="0"
				android:layout_marginRight="6dp"
				android:layout_marginLeft="6dp"
			>
				<TableRow
					android:id="@+id/expense_list_table_header"
				>
					<TextView
						android:text="@string/expense_type"
						android:textAppearance="@style/CustomDialogColumnHeaderText"
						android:layout_marginRight="6dp"
					/>
					<TextView
						android:text="@string/expense_date"
						android:textAppearance="@style/CustomDialogColumnHeaderText"
						android:layout_marginRight="6dp"
					/>
					<TextView
						android:text="@string/expense_amount"
						android:textAppearance="@style/CustomDialogColumnHeaderText"
						android:layout_gravity="right"
						android:gravity="right"
					/>
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
