<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ConcurTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/MaterialWhite"
    android:orientation="vertical" >

    <View
        android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/concurlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/concur_logo_sign_in"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                />

            <TextView
                android:id="@+id/emailIdLabel"
                style="@style/TransparantButton_Material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/sso_sign_in_title"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                />

            <EditText
                android:id="@+id/companyCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/sso_sign_in_hint_text"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect|textNoSuggestions|textFilter|textVisiblePassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/MaterialConcurBlue"
                android:backgroundTint="@color/MaterialConcurBlue"
                android:textSize="14dp"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp" />

        <Button
            android:id="@+id/loginButton"
            style="@style/StandardBlueButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/sso_signin" />

        <TextView
            android:id="@+id/login_company_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/sso_sign_in_sub_title"
            android:textAppearance="@style/TestRegSecondary_Material" />
    </LinearLayout>

</LinearLayout>